uploaded to PyPI

--- a/notebook/gamma plot.ipynb
+++ b/notebook/gamma plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0590b86b",
+   "id": "38a79311",
    "metadata": {},
    "source": [
     "# Analogue Split -- Chemically Biased Parametric Data Splitting \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e966b820",
+   "id": "f884f8c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a86c8535",
+   "id": "085c6d18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cc45a7be",
+   "id": "d3020886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "267d2a9a",
+   "id": "92c6463f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a864ed0e",
+   "id": "564e8d01",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c99d72fa",
+   "id": "f5302bf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b99e71c",
+   "id": "1fbde588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63e373eb",
+   "execution_count": 8,
+   "id": "ef9419d5",
    "metadata": {
     "scrolled": false
    },
@@ -220,6 +220,22 @@
      "output_type": "stream",
      "text": [
       "CHEMBL3880337 || Number of Molecules = 618 || # Actives / # Inactives = 207 / 411\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 27\u001b[0m\n\u001b[1;32m     11\u001b[0m models \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRandomForest\u001b[39m\u001b[38;5;124m\"\u001b[39m: RandomForestClassifier(), \n\u001b[1;32m     12\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVC\u001b[39m\u001b[38;5;124m\"\u001b[39m: SVC(),\n\u001b[1;32m     13\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLinearSVC\u001b[39m\u001b[38;5;124m\"\u001b[39m: LinearSVC(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     23\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHistGradientBoostingClassifier\u001b[39m\u001b[38;5;124m\"\u001b[39m: HistGradientBoostingClassifier()\n\u001b[1;32m     24\u001b[0m          }\n\u001b[1;32m     25\u001b[0m gammas \u001b[38;5;241m=\u001b[39m [x \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m20\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m21\u001b[39m)]\n\u001b[0;32m---> 27\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_and_evaluate_models\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgammas\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.8\u001b[39;49m\n\u001b[1;32m     29\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m plot_evaluation_results(results, gammas, plot_title)\n",
+      "File \u001b[0;32m~/projects/analogue-split/analoguesplit/analoguesplit.py:265\u001b[0m, in \u001b[0;36mtrain_and_evaluate_models\u001b[0;34m(gammas, fps, labels, models, test_size, omega)\u001b[0m\n\u001b[1;32m    263\u001b[0m \u001b[38;5;66;03m# Train and evaluate each model\u001b[39;00m\n\u001b[1;32m    264\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model_name, model \u001b[38;5;129;01min\u001b[39;00m models\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m--> 265\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    266\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[1;32m    268\u001b[0m     \u001b[38;5;66;03m# Calculate evaluation metrics\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/sklearn/ensemble/_hist_gradient_boosting/gradient_boosting.py:687\u001b[0m, in \u001b[0;36mBaseHistGradientBoosting.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    669\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_trees_per_iteration_):\n\u001b[1;32m    670\u001b[0m     grower \u001b[38;5;241m=\u001b[39m TreeGrower(\n\u001b[1;32m    671\u001b[0m         X_binned\u001b[38;5;241m=\u001b[39mX_binned_train,\n\u001b[1;32m    672\u001b[0m         gradients\u001b[38;5;241m=\u001b[39mg_view[:, k],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    685\u001b[0m         n_threads\u001b[38;5;241m=\u001b[39mn_threads,\n\u001b[1;32m    686\u001b[0m     )\n\u001b[0;32m--> 687\u001b[0m     \u001b[43mgrower\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    689\u001b[0m     acc_apply_split_time \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m grower\u001b[38;5;241m.\u001b[39mtotal_apply_split_time\n\u001b[1;32m    690\u001b[0m     acc_find_split_time \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m grower\u001b[38;5;241m.\u001b[39mtotal_find_split_time\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/sklearn/ensemble/_hist_gradient_boosting/grower.py:364\u001b[0m, in \u001b[0;36mTreeGrower.grow\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Grow the tree, from root to leaves.\"\"\"\u001b[39;00m\n\u001b[1;32m    363\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msplittable_nodes:\n\u001b[0;32m--> 364\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit_next\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    366\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_apply_shrinkage()\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/sklearn/ensemble/_hist_gradient_boosting/grower.py:599\u001b[0m, in \u001b[0;36mTreeGrower.split_next\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    597\u001b[0m tic \u001b[38;5;241m=\u001b[39m time()\n\u001b[1;32m    598\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m should_split_left:\n\u001b[0;32m--> 599\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compute_best_split_and_push\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft_child_node\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    600\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m should_split_right:\n\u001b[1;32m    601\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compute_best_split_and_push(right_child_node)\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/sklearn/ensemble/_hist_gradient_boosting/grower.py:434\u001b[0m, in \u001b[0;36mTreeGrower._compute_best_split_and_push\u001b[0;34m(self, node)\u001b[0m\n\u001b[1;32m    425\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_compute_best_split_and_push\u001b[39m(\u001b[38;5;28mself\u001b[39m, node):\n\u001b[1;32m    426\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Compute the best possible split (SplitInfo) of a given node.\u001b[39;00m\n\u001b[1;32m    427\u001b[0m \n\u001b[1;32m    428\u001b[0m \u001b[38;5;124;03m    Also push it in the heap of splittable nodes if gain isn't zero.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    431\u001b[0m \u001b[38;5;124;03m    (min_hessians_to_split, min_gain_to_split, min_samples_leaf)\u001b[39;00m\n\u001b[1;32m    432\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 434\u001b[0m     node\u001b[38;5;241m.\u001b[39msplit_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplitter\u001b[49m\u001b[38;5;241m.\u001b[39mfind_node_split(\n\u001b[1;32m    435\u001b[0m         n_samples\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mn_samples,\n\u001b[1;32m    436\u001b[0m         histograms\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mhistograms,\n\u001b[1;32m    437\u001b[0m         sum_gradients\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39msum_gradients,\n\u001b[1;32m    438\u001b[0m         sum_hessians\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39msum_hessians,\n\u001b[1;32m    439\u001b[0m         value\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mvalue,\n\u001b[1;32m    440\u001b[0m         lower_bound\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mchildren_lower_bound,\n\u001b[1;32m    441\u001b[0m         upper_bound\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mchildren_upper_bound,\n\u001b[1;32m    442\u001b[0m         allowed_features\u001b[38;5;241m=\u001b[39mnode\u001b[38;5;241m.\u001b[39mallowed_features,\n\u001b[1;32m    443\u001b[0m     )\n\u001b[1;32m    445\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m node\u001b[38;5;241m.\u001b[39msplit_info\u001b[38;5;241m.\u001b[39mgain \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:  \u001b[38;5;66;03m# no valid split\u001b[39;00m\n\u001b[1;32m    446\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_finalize_leaf(node)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
